chore: overhauled html and css files, much more readable, and fixed wireframe of the website

--- a/styles.css
+++ b/styles.css
@@ -1,65 +1,76 @@
 body {
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
     margin: 0;
-    display: flex;
-    flex-direction: column;
+    padding: 0;
 }
-.navBar {
-    width: 100%;
-    height: 150px;
-    font-size: 75px;
+.navBar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: lightblue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.previousProjects{
-    width: 100%;
+    padding: 20px;
+    border-bottom: 1px solid black;
     font-size: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.featuredPhoto{
+    position: relative;
     width: 100%;
-    font-size: 50px;
+}
+.logo img{
+    width: 100px;
+    height: auto;
+    position: absolute;
+    top: 10px;
+    left: 20px;
+}
+.featured {
+    margin: 20px;
+}
+.featured img{
+    width: 30vw;
+    max-width: 1000px;
+    height:auto;
+ 
+    border: 2px solid black;
+}
+.projects {
+    margin: 20px;
+}
+.photos{
     display: flex;
     justify-content: center;
-    align-items: center;
+    gap: 15px;
 }
 
-.featured{
+.image{
+    width: 20vw;
+    height: auto;
+    border: 2px solid black;
+    flex-wrap: wrap;
+}
+.aboutme {
     display: flex;
     justify-content: center;
-    align-items: center;
+    gap: 50px;
+    margin-top: 20px;
 }
-.photos {
-    width: 100%;
-    padding: 25px;
-    display: flex;
-    gap: 5px;
-    justify-content: center;
-    align-items: center;
-
-}
-.section2 {
-    width: 100%;
-    display:flex;
-    justify-content: space-evenly;
-    font-size: 50px;
-    flex-direction: row;
-    align-content: center;
-}
-.subsection2 {
-    width: 100%;
-    margin: 5px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.imgabtme {
+    width: 20vw;
+    border: 2px solid black;
 }
 .footer{
-    width: 100%;
-    font-size: 25px;
     display: flex;
+    align-items: center;
     justify-content: center;
-    flex-direction: row;
+    background-color: lightblue;
+    padding: 20px;
+    border-top: 1px solid black;
+    font-size: 20px;    
+}
+.footer img{
+    width: 200px;
+    height: auto;
+    position: absolute;
+
+    left: 20px;
 }
